[package]
name = "lin-ldf-wasm"
version = "0.1.0"
description = "WebAssembly parser for LDF files that describe automotive LIN bus networks."
edition = "2021"
license = "MIT"
authors = ["Zach Grimaldi <zpg6@pitt.edu>"]
documentation = "https://docs.rs/lin-ldf"
repository = "https://github.com/zpg6/lin-ldf"
categories = ["development-tools", "wasm"]
keywords = ["ldf", "parser", "lin", "linbus", "automotive", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["demo"]
demo = []

[dependencies]
lin-ldf = { path = "..", features = ["serde"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Enable optimizations for smaller wasm binary
opt-level = 3
lto = true