[package]
name = "lin-ldf"
version = "0.1.1"
description = "WebAssembly parser for LDF files that describe automotive LIN bus networks."
edition = "2021"
license = "MIT"
authors = ["Zach Grimaldi <zpg6@pitt.edu>"]
documentation = "https://docs.rs/lin-ldf"
repository = "https://github.com/zpg6/lin-ldf"
categories = ["development-tools", "wasm"]
keywords = ["ldf", "parser", "lin", "linbus", "automotive", "wasm", "webassembly"]

[lib]
crate-type = ["cdylib"]

[features]
default = ["demo"]
demo = []
ts-rs = ["dep:ts-rs", "lin-ldf/ts-rs"]

[dependencies]
lin-ldf = { path = "..", features = ["serde", "ts-rs"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.4"
wee_alloc = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"
ts-rs = { version = "10.0", optional = true, features = ["serde-compat"] }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[profile.release]
# Enable optimizations for smaller wasm binary
opt-level = 3
lto = true